# algorithms_ivanov

./: README.md  pyproject.toml
lab01/: README.md  search_comparsion.py
lab02/: README.md
lab02/src/: linked_list.py  performance_analysis.py  task_solutions.py
lab03/: README.md
lab03/src/: memoization.py  recursion.py  recursion_tasks.py
lab04/: README.md
lab04/src/: generate_data.py  performance_test.py  plot_results.py  sorts.py
lab05/: README.md
lab05/src/: benchmarks.py  collision_analysis.py  hash_functions.py  hash_table_chaining.py  hash_table_open_addressing.py  plot_collisions.py  plot_results.py  test.py
lab06/: README.md
lab06/src/: analysis.py  binary_search_tree.py  test.py  tree_traversal.py
lab06/tests/: test_bst.py
