[project]
name = "algo"
version = "0.1.0"
description = ""
authors = [
    {name = "y-ivanovv",email = "yurastav126@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
